nerf roid bots, buff roid bot loot

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
@@ -1082,6 +1082,9 @@
   name: malfunctionnig scrap unit
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 3.6 # -20% from normal speed
+    baseSprintSpeed : 3.6 # -20% from normal speed
   - type: Loadout
     prototypes:
     - MobRogueSiliconLootT0
@@ -1138,7 +1141,6 @@
           mask_null: ""
         overlayUnshaded:
           overlay_critdmg: ""
-          mask_null: ""
 
 - type: entity
   parent:
@@ -1148,6 +1150,9 @@
   name: malfunctionnig scrap unit
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 3.6 # -20% from normal speed
+    baseSprintSpeed : 3.6 # -20% from normal speed
   - type: Loadout
     prototypes:
     - MobRogueSiliconLootT0
@@ -1191,7 +1196,6 @@
           mask_null: ""
         overlayUnshaded:
           overlay_critdmg: ""
-          mask_null: ""
 
 - type: entity
   parent:
@@ -1201,6 +1205,9 @@
   name: malfunctionnig scrap unit
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 3.6 # -20% from normal speed
+    baseSprintSpeed : 3.6 # -20% from normal speed
   - type: Loadout
     prototypes:
     - MobRogueSiliconLootT0
@@ -1244,7 +1251,6 @@
           mask_null: ""
         overlayUnshaded:
           overlay_critdmg: ""
-          mask_null: ""
   - type: PointLight
     radius: 2.5
     color: orange
