--- a/Resources/Prototypes/_NF/Catalog/Fills/Backpacks/npc_loot_silicons.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Backpacks/npc_loot_silicons.yml
@@ -36,6 +36,9 @@
   components:
   - type: SpawnItemsOnUse
     items:
+    # Scrap chunks
+    - id: ScrapOre20
+      prob: 1.0
     # Parts
     - id: AdvancedCapacitorStockPart
       prob: 0.3
@@ -59,6 +62,9 @@
   components:
   - type: SpawnItemsOnUse
     items:
+    # Scrap chunks
+    - id: ScrapOre20
+      prob: 1.0
     # Parts
     - id: AdvancedCapacitorStockPart
       prob: 0.4
@@ -87,6 +93,9 @@
   components:
   - type: SpawnItemsOnUse
     items:
+    # Scrap chunks
+    - id: ScrapOre20
+      prob: 1.0
     # Parts
     - id: SuperCapacitorStockPart
       prob: 0.4
@@ -119,6 +128,9 @@
   components:
   - type: SpawnItemsOnUse
     items:
+    # Scrap chunks
+    - id: ScrapOre20
+      prob: 1.0
     # Parts
     - id: QuadraticCapacitorStockPart
       prob: 0.5
@@ -155,6 +167,9 @@
   components:
   - type: SpawnItemsOnUse
     items:
+    # Scrap chunks
+    - id: ScrapOre20
+      prob: 1.0
     - id: WeaponLaserTurboNF
       prob: 0.1
     # Parts
