--- a/Resources/Prototypes/_NF/Entities/Materials/ore.yml
+++ b/Resources/Prototypes/_NF/Entities/Materials/ore.yml
@@ -2,7 +2,7 @@
 - type: entity
   parent: OreBase
   id: ScrapOre
-  name: scrap ore
+  name: scrap chunks
   suffix: Full
   components:
   - type: Stack
@@ -46,6 +46,14 @@
   components:
   - type: Stack
     count: 3
+
+- type: entity
+  parent: ScrapOre
+  id: ScrapOre20
+  suffix: 20
+  components:
+  - type: Stack
+    count: 20
 
 - type: material
   id: RawScrap
