POC for price reduction, contraband value removal

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -18,6 +18,7 @@
         layer:
           - MachineLayer
   - type: Lathe
+    productValueModifier: 0.3 # Frontier
   - type: MaterialStorage
     whitelist: # Frontier
       tags: # Frontier
