Light boxes into the spawner pool. Finish your work dusty.

--- a/Resources/Prototypes/Nyanotrasen/Entities/Markers/Spawners/Random/boxes.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Markers/Spawners/Random/boxes.yml
@@ -17,6 +17,7 @@
       - BoxLighttube
       - BoxLightMixed
       - BoxColoredLighttube
+      - BoxColoredNavigationLighttube #Frontier
       - BoxMesonScanners
 #      - BoxMRE # Frontier
       - BoxInflatable
