--- a/Resources/Maps/_NF/POI/medical.yml
+++ b/Resources/Maps/_NF/POI/medical.yml
@@ -5006,23 +5006,6 @@ entities:
     - type: Transform
       pos: 9.5,-10.5
       parent: 1
-- proto: DrinkGlass
-  entities:
-  - uid: 1655
-    components:
-    - type: Transform
-      pos: -1.4754446,-7.1302104
-      parent: 1
-  - uid: 1656
-    components:
-    - type: Transform
-      pos: -1.6160696,-7.3489604
-      parent: 1
-  - uid: 1657
-    components:
-    - type: Transform
-      pos: -1.1941946,-7.4270854
-      parent: 1
 - proto: DrinkGlassCoupeShaped
   entities:
   - uid: 405
@@ -11648,12 +11631,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,-5.5
       parent: 1
-  - uid: 1625
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,-7.5
-      parent: 1
 - proto: TableWoodReinforced
   entities:
   - uid: 34
@@ -11733,6 +11710,13 @@ entities:
     components:
     - type: Transform
       pos: 4.5,2.5
+      parent: 1
+- proto: VendingMachineBooze
+  entities:
+  - uid: 1625
+    components:
+    - type: Transform
+      pos: -1.5,-7.5
       parent: 1
 - proto: VendingMachineChemDrobe
   entities:
