--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1774,7 +1774,7 @@
     seedId: gatfruit
   - type: Food
     trash:
-    - WeaponRevolverPythonGrown # Frontier: WeaponRevolverPython<WeaponRevolverPythonGrown
+    - WeaponRevolverPython
   - type: Tag
     tags:
     - Fruit # It's in the name
