Revert ore processor value

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1387,6 +1387,7 @@
       idleState: icon
       runningState: building
       defaultProductionAmount: 10
+      productValueModifier: null # Frontier
       staticRecipes:
         - SheetSteel
         - SheetGlass1
