--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1237,8 +1237,8 @@
       - FloorTileItemArcadeBlue # Frontier
       - FloorTileItemArcadeBlue2 # Frontier
       - FloorTileItemArcadeRed # Frontier
-#  - type: EmagLatheRecipes # Frontier
-#    emagStaticRecipes: # Frontier
+  - type: EmagLatheRecipes
+    emagStaticRecipes:
 #      - ClothingHeadHatCentcomcap # Frontier
 #      - ClothingHeadHatCentcom # Frontier
 #      - ClothingUniformJumpsuitCentcomAgent # Frontier
@@ -1246,21 +1246,21 @@
 #      - ClothingUniformJumpskirtCentcomFormalDress # Frontier
 #      - ClothingUniformJumpsuitCentcomOfficer # Frontier
 #      - ClothingUniformJumpsuitCentcomOfficial # Frontier
-#      - ClothingHeadHatSyndieMAA # Frontier
-#      - ClothingHeadHatSyndie # Frontier
-#      - ClothingUniformJumpsuitOperative # Frontier
-#      - ClothingUniformJumpskirtOperative # Frontier
-#      - ClothingUniformJumpsuitSyndieFormal # Frontier
-#      - ClothingUniformJumpskirtSyndieFormalDress # Frontier
-#      - ClothingHeadPyjamaSyndicateBlack # Frontier
-#      - ClothingUniformJumpsuitPyjamaSyndicateBlack # Frontier
-#      - ClothingHeadPyjamaSyndicatePink # Frontier
-#      - ClothingUniformJumpsuitPyjamaSyndicatePink # Frontier
-#      - ClothingHeadPyjamaSyndicateRed # Frontier
-#      - ClothingUniformJumpsuitPyjamaSyndicateRed # Frontier
+      - ClothingHeadHatSyndieMAA
+      - ClothingHeadHatSyndie
+      - ClothingUniformJumpsuitOperative
+      - ClothingUniformJumpskirtOperative
+      - ClothingUniformJumpsuitSyndieFormal
+      - ClothingUniformJumpskirtSyndieFormalDress
+      - ClothingHeadPyjamaSyndicateBlack
+      - ClothingUniformJumpsuitPyjamaSyndicateBlack
+      - ClothingHeadPyjamaSyndicatePink
+      - ClothingUniformJumpsuitPyjamaSyndicatePink
+      - ClothingHeadPyjamaSyndicateRed
+      - ClothingUniformJumpsuitPyjamaSyndicateRed
 #      - ClothingOuterWinterCentcom # Frontier
-#      - ClothingOuterWinterSyndie # Frontier
-#      - ClothingOuterWinterSyndieCap # Frontier
+      - ClothingOuterWinterSyndie
+      - ClothingOuterWinterSyndieCap
   - type: MaterialStorage
     whitelist:
       tags:
