Return value to scrap processor

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1095,7 +1095,7 @@
     emagStaticRecipes:
       - NFPlushieBotanistRecipe
       - NFPlushieCmoRecipe
-      - NFPlushieEngineerRecipe      
+      - NFPlushieEngineerRecipe
       - PlushieJesterRecipe
       - PlushieJanitorRecipe
       - PlushieNukeRecipe
@@ -1206,6 +1206,7 @@
     unlitIdleState: unshaded
     unlitRunningState: building-unshaded
     defaultProductionAmount: 10
+    productValueModifier: null
     staticRecipes:
     - SmeltScrap
     - ScrapPartRodMetal1
