breaded chicken cuts to breaded cutlets

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meat.yml
@@ -37,6 +37,9 @@
   - type: DeepFrySpawn
     cycles: 2
     output: FoodMeatChickenFried
+  - type: SliceableFood
+    count: 3
+    slice: FoodMeatChickenCutletBattered
 
 - type: entity
   name: breaded chicken cutlet
