--- a/Resources/Prototypes/_NF/Entities/World/Debris/asteroids.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/asteroids.yml
@@ -479,7 +479,7 @@
             prob: 0.05
             orGroup: rock
     - type: IFF
-      color: "brown"
+      color: "#fcdec7"
 
 # Concrete asteroids (Base type)
 - type: entity
