Add description to scrap chunks

--- a/Resources/Prototypes/_NF/Entities/Materials/ore.yml
+++ b/Resources/Prototypes/_NF/Entities/Materials/ore.yml
@@ -3,6 +3,7 @@
   parent: OreBase
   id: ScrapOre
   name: scrap chunks
+  description: Various bits of previously used machinery. Needs to be sorted or processed to use.
   suffix: Full
   components:
   - type: Stack
