Resolved integration tests.

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1141,7 +1141,9 @@
     - NFBlueprintPowerDrill
     - NFBlueprintJawsOfLife
     - NFBlueprintWelderExperimental
+    - NFBlueprintShipyardRCD
     - NFBlueprintShipyardRCDAmmo
+    - NFBlueprintPowerCellHigh
     - NFBlueprintPowerCellMicroreactor
     - NFBlueprintSignallerAdvanced
     - NFBlueprintClothingBackpackHolding
@@ -1165,15 +1167,21 @@
     - NFBlueprintPicoManipulatorStockPart
     - NFBlueprintSuperMatterBinStockPart
     - NFBlueprintClothingShoesBootsMagAdv
+    - NFBlueprintClothingShoesBootsSpeed
     # Service
     - NFBlueprintAdvMopItem
     - NFBlueprintPlantAnalyzerEmpty
     - NFBlueprintPlantBagOfHolding
+    - NFBlueprintWeaponSprayNozzle
+    - NFBlueprintBackpackWaterTank
     # Armory
     - NFBlueprintWeaponAntiqueLaser
     - NFBlueprintWeaponLaserSvalinn
     - NFBlueprintPortableRecharger
     - BlueprintClothingOuterHardsuitScaf
+    - NFBlueprintWeaponShotgunKammererNF
+    - NFBlueprintTelescopicShield
+    - NFBlueprintHandcuffs
   - type: RequireProjectileTarget
 
 - type: entity
