First pass fixes
Update job icon
Update job loadouts to be more CMO appropriate
Minor POI updates
Minor job name update

--- a/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
@@ -199,26 +199,23 @@
 - type: roleLoadout
   id: JobMedicalOperationsManager
   groups:
-  - MercenaryHead
-  - ContractorNeck
-  - MercenaryJumpsuit
+  - MomHead
+  - MomNeck
+  - MomJumpsuit
   - MercenaryGloves
-  - MercenaryBackpack
-  - MercenaryOuterClothing
-  - MercenaryShoes
-  - MercenaryFace
-  - MercenaryGlasses
+  - MercenaryBackpack  
+  - ContractorShoes
+  - ContractorFace
+  - ContractorGlasses
   - MomPDA
-  - MercenaryBelt
-  - MercenaryEars
-  - ContractorEncryptionKey
+  - ContractorBelt
+  - MomEars
   - ContractorBoxSurvival
   - ContractorCartridge
   - ContractorImplanter
-  - ContractorUtility
   - ContractorFun
   - ContractorTrinkets
-  - ContractorBureaucracy  
+  - ContractorBureaucracy
 
 # Nfsd
 - type: roleLoadout
