--- a/Resources/Prototypes/_NF/Loadouts/mom_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/mom_loadout_groups.yml
@@ -1,4 +1,47 @@
 - type: loadoutGroup
+  id: MomJumpsuit
+  name: loadout-group-contractor-jumpsuit
+  loadouts:
+  - ChiefMedicalOfficerJumpsuit
+  - ChiefMedicalOfficerJumpskirt
+  - ChiefMedicalOfficerTurtleneckJumpsuit
+  - ChiefMedicalOfficerTurtleneckJumpskirt
+  fallbacks:
+  - ChiefMedicalOfficerJumpsuit
+  - ChiefMedicalOfficerJumpskirt
+
+- type: loadoutGroup
+  id: MomHead
+  name: loadout-group-contractor-head
+  minLimit: 0
+  loadouts:
+  - ChiefMedicalOfficerBeret
+  - CMOMedicalHeadMirror
+  subgroups:
+  - ContractorHead
+
+- type: loadoutGroup
+  id: MomEars
+  name: loadout-group-contractor-ears
+  minLimit: 1
+  maxLimit: 1
+  loadouts:
+  - StationRepClothingHeadsetAltCentComCommon
+  subgroups:
+  - MercenaryEars
+  - PilotEars
+  - ContractorEars
+  fallbacks:
+  - StationRepClothingHeadsetAltCentComCommon
+
+- type: loadoutGroup
+  id: MomNeck
+  name: loadout-group-contractor-neck
+  minLimit: 0
+  loadouts:
+  - ChiefMedicalOfficerCloak
+
+- type: loadoutGroup
   id: MomPDA
   name: loadout-group-contractor-id
   hidden: true # No point in showing this, it gets auto-selected.
@@ -6,3 +49,16 @@
   - MedicMomPDA
   fallbacks:
   - MedicMomPDA
+
+- type: loadoutGroup
+  id: MomShoes
+  name: loadout-group-contractor-shoes
+  loadouts:
+  - MercenaryClothingShoesBootsMercenary
+  - MercenaryClothingShoesBootsJack
+  - MercenaryClothingShoesBootsCombat
+  subgroups:
+  - PilotShoes
+  - ContractorShoes
+  fallbacks:
+  - MercenaryClothingShoesBootsMercenary
