adjustments to food quality

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meals.yml
@@ -333,7 +333,7 @@
   description: BBQ ribs, slathered in a healthy coating of BBQ sauce. The least vegan thing to ever exist.
   components:
   - type: Food
-    trash: 
+    trash:
     - FoodKebabSkewer
   - type: FlavorProfile
     flavors:
@@ -492,6 +492,8 @@
           Quantity: 10
         - ReagentId: Blackpepper
           Quantity: 3
+  - type: Food # Frontier
+    quality: Nasty # Frontier
 # Tastes awesome.
 
 - type: entity
@@ -597,7 +599,7 @@
   description: Buttery.
   components:
   - type: Food
-    trash: 
+    trash:
     - FoodPlate
   - type: FlavorProfile
     flavors:
