--- a/Resources/Prototypes/Entities/Objects/Specific/rehydrateable.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/rehydrateable.yml
@@ -15,7 +15,7 @@
           Quantity: 10
   - type: Food
     solution: cube
-    quality: Junk # Frontier
+    quality: SuperJunk # Frontier
   - type: FlavorProfile
     flavors:
     - chewy
@@ -237,7 +237,7 @@
           Quantity: 10
   - type: Food
     solution: cube
-    quality: Junk # Frontier
+    quality: SuperJunk # Frontier
   - type: FlavorProfile
     flavors:
     - chewy
