Fix gold wristwatch, no matching station teleport

--- a/Resources/Prototypes/_NF/Mail/mail.yml
+++ b/Resources/Prototypes/_NF/Mail/mail.yml
@@ -1827,7 +1827,7 @@
   - type: Mail
     isFragile: true
     contents:
-      - id: MailCommandNFWristwatchGold
+      - id: WristwatchGold
 
 - type: entity
   categories: [ HideSpawnMenu ]
