Add two posters, "Bahama Mama's", "Winner Winner"

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
@@ -171,4 +171,6 @@
       - PosterLegitSafetyMothSSD
       - NFPosterLegitMagnusWatching # Frontier
       - NFPosterLegitGoblinTinkerer # Frontier
+      - NFPosterLegitBahamaMama # Frontier
+      - NFPosterLegitWinnerWinner # Frontier
     chance: 1
