ruminant box, wrappers

--- a/Resources/Prototypes/_NF/Entities/Objects/Misc/monkeycube.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Misc/monkeycube.yml
@@ -31,9 +31,9 @@
       amount: 1
     - id: CowCubeWrapped
       amount: 1
-#  - type: Sprite
-#    sprite: _NF/Objects/Misc/monkeycube.rsi
-#    state: box_poultry
+ - type: Sprite
+   sprite: _NF/Objects/Misc/monkeycube.rsi
+   state: box_ruminant
   - type: StaticPrice
     price: 20
     vendPrice: 2000 # Meat only worth 607 at a depot, but can produce more stuff from extra goats + milk
@@ -76,9 +76,9 @@
   - type: SpawnItemsOnUse
     items:
     - id: GoatCube
-#  - type: Sprite
-#    sprite: Objects/Misc/monkeycube.rsi
-#    state: wrapper_goat
+ - type: Sprite
+   sprite: _NF/Objects/Misc/monkeycube.rsi
+   state: wrapper_goat
 
 - type: entity
   parent: MonkeyCubeWrapped
@@ -90,9 +90,9 @@
   - type: SpawnItemsOnUse
     items:
     - id: PigCube
-#  - type: Sprite
-#    sprite: _NF/Objects/Misc/monkeycube.rsi
-#    state: wrapper_pig
+ - type: Sprite
+   sprite: _NF/Objects/Misc/monkeycube.rsi
+   state: wrapper_pig
 
 - type: entity
   parent: MonkeyCubeWrapped
@@ -104,6 +104,6 @@
   - type: SpawnItemsOnUse
     items:
     - id: CowCube
-#  - type: Sprite
-#    sprite: _NF/Objects/Misc/monkeycube.rsi
-#    state: wrapper_cow
+ - type: Sprite
+   sprite: _NF/Objects/Misc/monkeycube.rsi
+   state: wrapper_cow
