--- a/Resources/Prototypes/_NF/Entities/Objects/Misc/monkeycube.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Misc/monkeycube.yml
@@ -2,7 +2,7 @@
   parent: BoxCardboard
   name: poultry cube box
   id: PoultryCubeBox
-  description: Drymate brand poultry cubes, chicken and duck. Just add water!
+  description: "A box of poultry cubes: chickens and ducks! Just add water!"
   components:
   - type: StorageFill
     contents:
@@ -21,7 +21,7 @@
   parent: VariantCubeBox
   name: ruminant cube box
   id: RuminantCubeBox
-  description: Drymate brand ruminant cubes, cow, pig and goats. Just add water!
+  description: "A box of ruminant cubes: a cow, a pig and goats! Just add water!"
   components:
   - type: StorageFill
     contents:
