Adds medtek cartridges to where they oughta be.

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/wallmed.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/wallmed.yml
@@ -7,4 +7,5 @@
     Gauze: 6 # Frontier
     EpinephrineChemistryBottle: 6
     Syringe: 6
-    BoxFolderMedicalDoctor: 1 # Frontier
+    BoxFolderMedicalDoctor: 4294967295 # Frontier - infinite
+    MedTekCartridge: 4294967295 # Frontier - infinite
