--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/wallmed.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/wallmed.yml
@@ -7,5 +7,5 @@
     Gauze: 6 # Frontier
     EpinephrineChemistryBottle: 6
     Syringe: 6
-    BoxFolderMedicalDoctor: 4294967295 # Frontier - infinite
-    MedTekCartridge: 4294967295 # Frontier - infinite
+    BoxFolderMedicalDoctor: 1 #Frontier
+    MedTekCartridge: 1 # Frontier
