Adds medtek cartridges to Nano/Civimed (#2501)
* Adds medtek cartridges to where they oughta be.

* Update with more reasonable numbers

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -16,3 +16,4 @@
     BikeHornImplanterLabeled: 10 # Frontier
     LightImplanterLabeled: 10 # Frontier
     BoxFolderMedicalDoctor: 4294967295 # Frontier - infinite
+    MedTekCartridge: 3 # Frontier
