--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -111,10 +111,10 @@
   - ContractorClothingUniformJumpskirtQMTurtleneck
   - ContractorClothingUniformJumpsuitSeniorPhysician
   - ContractorClothingUniformJumpskirtSeniorPhysician
-  - ContractorClothingUniformJumpsuitCMO
-  - ContractorClothingUniformJumpskirtCMO
-  - ContractorClothingUniformTurtleneckCMO
-  - ContractorClothingUniformTurtleskirtCMO
+  #- ContractorClothingUniformJumpsuitCMO # Temp removed for MOM. Will return if replaced.
+  #- ContractorClothingUniformJumpskirtCMO # Temp removed for MOM. Will return if replaced. #
+  #- ContractorClothingUniformTurtleneckCMO # Temp removed for MOM. Will return if replaced. #
+  #- ContractorClothingUniformTurtleskirtCMO # Temp removed for MOM. Will return if replaced. #
   - ContractorClothingUniformJumpsuitSeniorResearcher
   - ContractorClothingUniformJumpskirtSeniorResearcher
   - ContractorClothingUniformJumpsuitResearchDirector
@@ -155,7 +155,7 @@
   - ContractorClothingUniformJumpsuitMilitaryChemistry
   - ContractorClothingUniformJumpsuitMilitaryVirology
   - ContractorClothingUniformJumpsuitMilitaryGenetics
-  - ContractorClothingUniformJumpsuitMilitaryCMO
+ # - ContractorClothingUniformJumpsuitMilitaryCMO # Temp removed for MOM. Will return if replaced.
   - ContractorClothingUniformJumpsuitMilitaryScientist
   - ContractorClothingUniformJumpsuitMilitaryResearchDirector
   - ContractorClothingUniformJumpsuitMilitaryService
@@ -304,9 +304,9 @@
   - ContractorClothingOuterWinterMime
   - ContractorClothingOuterWinterQM
   - ContractorClothingOuterWinterRD
-  - ContractorClothingOuterWinterCMO
+#  - ContractorClothingOuterWinterCMO # Temp removed for MOM. Will return if replaced.
   - ContractorClothingOuterWinterCE
-  - ContractorClothingOuterCoatLabCmo
+#  - ContractorClothingOuterCoatLabCmo # Temp removed for MOM. Will return if replaced.
   - ContractorClothingOuterCoatLabSeniorPhysician
   - ContractorClothingOuterCoatRD
   - ContractorClothingOuterCoatLabSeniorResearcher
@@ -428,7 +428,7 @@
   - ContractorClothingShoesHighheelBoots
   - ContractorClothingShoesBootsCowboyFancy
   - ContractorClothingShoesBootsWinterChiefEngineer
-  - ContractorClothingShoesBootsWinterCMO
+#  - ContractorClothingShoesBootsWinterCMO # Temp removed for MOM. Will return if replaced.
   - ContractorClothingShoesBootsWinterQM
   - ContractorClothingShoesBootsWinterRD
   - ContractorClothingShoesBootsWinterClown
@@ -490,7 +490,7 @@
   - ContractorClothingHeadHatBeretRND
   - ContractorClothingHeadHatBeretEngineering
   - ContractorClothingHeadHatBeretSeniorPhysician
-  - ContractorClothingHeadHatBeretCmo
+#  - ContractorClothingHeadHatBeretCmo # Temp removed for MOM. Will return if replaced.
   - ContractorClothingHeadHatBeretQM
   - ContractorClothingHeadHatQMsoft
   - ContractorClothingHeadHatCardinal
@@ -615,8 +615,8 @@
   - ContractorClothingNeckMantleCap
   - ContractorClothingNeckCloakQm
   - ContractorClothingNeckMantleQM
-  - ContractorClothingCloakCmo
-  - ContractorClothingNeckMantleCMO
+#  - ContractorClothingCloakCmo # Temp removed for MOM. Will return if replaced.
+#  - ContractorClothingNeckMantleCMO # Temp removed for MOM. Will return if replaced.
   - ContractorClothingNeckCloakRd
   - ContractorClothingNeckMantleRD
   - ContractorClothingNeckCloakCe
@@ -654,7 +654,7 @@
   - ContractorSeniorResearcherPDA
   - ContractorRnDPDA
   - ContractorSeniorPhysicianPDA
-  - ContractorCMOPDA
+  #- ContractorCMOPDA # Temp removed for MOM. Will return if replaced.
   - ContractorSeniorEngineerPDA
   - ContractorCEPDA
   - ContractorBoxerPDA
