--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -228,8 +228,9 @@
     - id: HypoMini # Frontier
 #    - id: MedicalTechFabCircuitboard # Frontier - bloat
 #    - id: MedkitFilled # Frontier - bloat
-    - id: RubberStampCMO
+#    - id: RubberStampCMO # Frontier - MOM stamp
     - id: MedTekCartridge
+    - id: ClothingBeltMedicalFilled # Frontier - add more bloat
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
