--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
@@ -13,7 +13,7 @@
     - map: ["computerLayerKeyboard"]
       state: generic_keyboard
     - map: ["computerLayerScreen"]
-      state: shipyard
+      state: shuttle_records
     - map: ["computerLayerKeys"]
       state: telesci_key
   - type: ShuttleRecordsConsole
