--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -13,6 +13,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: bat
       sprite: Mobs/Animals/bat.rsi
+  - type: Carriable #DeltaV
   - type: Speech
     speechSounds: Squeak
     speechVerb: SmallMob
@@ -125,6 +126,14 @@
   - type: HTN
     rootTask:
       task: SimpleHostileCompound
+  - type: Extractable # DeltaV - Make it so bees can be ground up
+    grindableSolutionName: bee
+  - type: SolutionContainerManager
+    solutions:
+      bee:
+        reagents:
+        - ReagentId: GroundBee
+          Quantity: 5
   - type: ZombieImmune
 
 - type: entity
@@ -174,6 +183,8 @@
     noMovementLayers:
       movement:
         state: chicken-0
+  - type: Carriable #Delta-V
+    freeHandsRequired: 1
   - type: Fixtures
     fixtures:
       fix1:
@@ -194,8 +205,6 @@
     - Chicken
     - VimPilot
   - type: Reproductive
-#    minBreedAttemptInterval: 300 # Frontier
-#    maxBreedAttemptInterval: 600 # Frontier
     breedChance: 0.05
     birthPopup: reproductive-laid-egg-popup
     makeOffspringInfant: false
@@ -632,6 +641,8 @@
         - MobMask
         layer:
         - MobLayer
+  - type: Carriable #DeltaV
+    freeHandsRequired: 1
   - type: Tag
     tags:
     - DoorBumpOpener
@@ -801,8 +812,6 @@
     - DoorBumpOpener
     - Cow
   - type: Reproductive
-#    minBreedAttemptInterval: 300 # Frontier
-#    maxBreedAttemptInterval: 600 # Frontier
     partnerWhitelist:
       tags:
       - Cow
@@ -889,6 +898,8 @@
     noMovementLayers:
       movement:
         state: crab
+  - type: Carriable #DeltaV
+    freeHandsRequired: 1
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -950,6 +961,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: goat
       sprite: Mobs/Animals/goat.rsi
+  - type: Carriable #DeltaV
   - type: Fixtures
     fixtures:
       fix1:
@@ -968,8 +980,6 @@
     - DoorBumpOpener
     - Goat
   - type: Reproductive
-#    minBreedAttemptInterval: 300 # Frontier
-#    maxBreedAttemptInterval: 600 # Frontier
     partnerWhitelist:
       tags:
       - Goat
@@ -1046,6 +1056,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: goose
       sprite: Mobs/Animals/goose.rsi
+  - type: Carriable #DeltaV
   - type: Fixtures
     fixtures:
       fix1:
@@ -1285,6 +1296,7 @@
       sprite: "Effects/creampie.rsi"
       state: "creampie_human"
       visible: false
+  - type: Carriable #DeltaV
   - type: Hands
   - type: ComplexInteraction
   - type: GenericVisualizer
@@ -1352,6 +1364,8 @@
       effects:
       - !type:WashCreamPieReaction
   - type: LabGrown # Frontier
+
+
 
 - type: entity
   name: monkey
@@ -1678,7 +1692,7 @@
       10: Critical
       20: Dead
   - type: MovementSpeedModifier
-    baseWalkSpeed : 2.5
+    baseWalkSpeed : 1.9  # DeltaV - Allows them to sneak over traps
     baseSprintSpeed : 5
   - type: DamageStateVisuals
     states:
@@ -1915,6 +1929,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: lizard
       sprite: Mobs/Animals/lizard.rsi
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -1971,6 +1986,8 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: slug
       sprite: Mobs/Animals/slug.rsi
+  - type: Carriable #DeltaV
+    freeHandsRequired: 1 
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2025,6 +2042,7 @@
     noMovementLayers:
       movement:
         state: frog
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2079,6 +2097,8 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: parrot
       sprite: Mobs/Animals/parrot.rsi
+  - type: Carriable #DeltaV
+    freeHandsRequired: 1
   - type: Fixtures
     fixtures:
       fix1:
@@ -2143,6 +2163,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: penguin
       sprite: Mobs/Animals/penguin.rsi
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2276,6 +2297,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: snake
       sprite: Mobs/Animals/snake.rsi
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2332,6 +2354,7 @@
     noMovementLayers:
       movement:
         state: tarantula
+  - type: Carriable #DeltaV ##shiva deserves to be held
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2527,6 +2550,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: possum
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2600,6 +2624,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: raccoon
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2660,6 +2685,7 @@
     noMovementLayers:
       movement:
         state: fox
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2731,6 +2757,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: corgi
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Speech
     speechVerb: Canine
@@ -2879,6 +2906,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: cat
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -2935,7 +2963,10 @@
   - type: Tag
     tags:
     - VimPilot
-  - type: NpcFactionMember # Frontier
+  - type: HTN # DeltaV - make all cats eat mice
+    rootTask:
+      task: SimpleHostileCompound
+  - type: NpcFactionMember # DeltaV - give cats faction so they fight mice
     factions:
     - Cat
 
@@ -3081,6 +3112,8 @@
         Base: kitten_dead
       Dead:
         Base: kitten_dead
+  - type: Carriable #DeltaV
+    freeHandsRequired: 1
   - type: Butcherable
     spawned:
     - id: FoodMeat
@@ -3111,6 +3144,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: sloth
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -3164,6 +3198,7 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: ferret
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
@@ -3267,7 +3302,7 @@
       40: Critical
       60: Dead
   - type: MovementSpeedModifier
-    baseWalkSpeed : 2.5
+    baseWalkSpeed : 1.9  # DeltaV - Allows them to sneak over traps
     baseSprintSpeed : 4
   - type: Inventory
     speciesId: hamster
@@ -3361,6 +3396,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: pig
       sprite: Mobs/Animals/pig.rsi
+  - type: Carriable #DeltaV
   - type: Fixtures
     fixtures:
       fix1:
@@ -3432,6 +3468,7 @@
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: nymph
       sprite: Mobs/Animals/nymph.rsi
+  - type: Carriable #DeltaV
   - type: Physics
   - type: Fixtures
     fixtures:
