--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
@@ -534,7 +534,7 @@
 
 - type: entity
   name: Emotional support RPG
-  parent: [BaseClearContraband, WeaponLauncherRocket] # Frontier: added BaseClearContraband
+  parent: [BaseClearContraband, WeaponLauncherRocket]
   id: WeaponLauncherRocketToy
   suffix: Toy
   description: A deactived RPG modified to only allow foam RPG warheads. "When in times of trouble and stressed out as can be, DON'T worry now because S.E.S.W.C has what you need!"
