--- a/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks.yml
@@ -30,7 +30,7 @@
     replacement: mumble
 
 - type: entity
-  parent: ClothingMaskPullableBase
+  parent: ClothingMaskGas
   id: ClothingMaskPilot
   name: pilot breathing mask
   description: A close-fitting breathing mask designed for, it would seems, minimal comfort of wearer.
@@ -39,7 +39,6 @@
     sprite: _NF/Clothing/Mask/pilot.rsi
   - type: Clothing
     sprite: _NF/Clothing/Mask/pilot.rsi
-  - type: BreathMask
 
 - type: entity
   parent: [ BaseC2ContrabandUnredeemable, ClothingMaskGasSecurity ]
