--- a/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
@@ -1,60 +1,3 @@
-  #pen recycling recipes #I think this is going to become cumbersome to maintain over time and the expanded reclaimer code makes it redundant.
-
-#- type: microwaveMealRecipe
-#  id: RecipeCleanEmergencyMedipen
-#  name: sterilize and reset pen
-#  result: BlankMediPen
-#  time: 5
-#  solids:
-#    EmergencyMedipen: 1
-#  reagents:
-#    SpaceCleaner: 1
-#  recipeType: MedicalAssembler # Frontier
-
-#- type: microwaveMealRecipe
-#  id: RecipeCleanAntiPoisonMedipen
-#  name: sterilize and reset pen
-#  result: BlankMediPen
-#  time: 5
-#  solids:
-#    AntiPoisonMedipen: 1
-#  reagents:
-#    SpaceCleaner: 5
-#  recipeType: MedicalAssembler # Frontier
-
-#- type: microwaveMealRecipe
-#  id: RecipeCleanBruteAutoInjector
-#  name: sterilize and reset pen
-#  result: BlankMediPen
-#  time: 5
-#  solids:
-#    BruteAutoInjector: 1
-#  reagents:
-#    SpaceCleaner: 5
-#  recipeType: MedicalAssembler # Frontier
-
-#- type: microwaveMealRecipe
-#  id: RecipeCleanBurnAutoInjector
-#  name: sterilize and reset pen
-#  result: BlankMediPen
-#  time: 5
-#  solids:
-#    BurnAutoInjector: 1
-#  reagents:
-#    SpaceCleaner: 5
-#  recipeType: MedicalAssembler # Frontier
-
-#- type: microwaveMealRecipe
-#  id: RecipeCleanRadAutoInjector
-#  name: sterilize and reset pen
-#  result: BlankMediPen
-#  time: 5
-#  solids:
-#    RadAutoInjector: 1
-#  reagents:
-#    SpaceCleaner: 5
-#  recipeType: MedicalAssembler # Frontier
-
   #pen recipes
   #Upstream recipes
 
@@ -157,9 +100,9 @@
 #Frontier pen recipes
 
 - type: microwaveMealRecipe
-  id: RecipePenCoagulate
-  name: coagulate auto-injector
-  result: CoagulateAutoInjector
+  id: RecipePenHemostasis
+  name: hemostasis auto-injector
+  result: HemostasisAutoInjector
   time: 5
   solids:
     BlankMediPen: 1
@@ -169,9 +112,9 @@
   recipeType: MedicalAssembler # Frontier
 
 - type: microwaveMealRecipe
-  id: RecipePenEpinine
-  name: epinine auto-injector
-  result: EpinineAutoInjector
+  id: RecipePenStimulant
+  name: stimulant auto-injector
+  result: StimulantAutoInjector
   time: 5
   solids:
     BlankMediPen: 1
