--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -131,6 +131,8 @@
   - ContractorClothingUniformJumpsuitKilt
   - ContractorClothingUniformJumpsuitDameDane
   - ContractorClothingUniformJumpsuitKimono
+  - ContractorClothingKimonoBlue
+  - ContractorClothingKimonoPink
   - ContractorClothingUniformJumpsuitGladiator
   - ContractorClothingUniformJumpskirtPerformer
   - ContractorClothingUniformJumpskirtJanimaid
