add Hypospray for transfer amount

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
@@ -77,6 +77,11 @@
     maxFillLevels: 1
     changeColor: false
     emptySpriteName: hemostasispen_empty
+  - type: Hypospray
+    solutionName: pen
+    transferAmount: 20
+    onlyAffectsMobs: false
+    injectOnly: true
   - type: SolutionContainerManager
     solutions:
       pen:
@@ -104,6 +109,11 @@
     maxFillLevels: 1
     changeColor: false
     emptySpriteName: stimulantpen_empty
+  - type: Hypospray
+    solutionName: pen
+    transferAmount: 20
+    onlyAffectsMobs: false
+    injectOnly: true
   - type: SolutionContainerManager
     solutions:
       pen:
@@ -131,6 +141,11 @@
     maxFillLevels: 1
     changeColor: false
     emptySpriteName: crisispen_empty
+  - type: Hypospray
+    solutionName: pen
+    transferAmount: 20
+    onlyAffectsMobs: false
+    injectOnly: true
   - type: SolutionContainerManager
     solutions:
       pen:
@@ -174,7 +189,7 @@
           Quantity: 5
   - type: Tag
     tags: []
-    
+
 - type: entity
   name: bruizine auto-injector
   parent: ChemicalMedipen
